# Final-year-project

./: CMakeLists.txt  README.md  package.xml
launch/: simple.launch  start.launch
src/: flying_patterns.py  fundamental_movements.py  plot.py  takeoff.py
src/code/: drone_object.py  flying_patterns.py  plan.py  plot.py
src/exported plans/: Plans
src/tests/: test_plan.py
urdf/: sjtu_drone.urdf
